<resources>
    <string name="app_name">Lenovo Launcher</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="toast_error_loading_image">Error occurred during loading image</string>
    <string name="toast_no_files">No files to show</string>
    <string name="toast_paused">Paused</string>
    <string name="toast_resumed">Resumed</string>
    <string name="toast_completed">Completed</string>
    <string name="toast_input_blocked">Input blocked. Long press to enable</string>
    <string name="toast_input_allowed">Input enabled</string>
    <string name="data_not_found">Data Not Found. Try Later.</string>
    <string name="auth_failure">Authorization Failure. Try Later.</string>
    <string name="broken_server">Server Broken. Please Try Again Later</string>
    <string name="network_issue">Network Issue, Try Again Later!</string>
    <string name="download">Download</string>
    <string name="could_not_load_data">Couldn\'t load Data. Error!</string>
    <string name="my_stay">My Stay</string>
    <string name="entertainment">Entertainment</string>
    <string name="relaxation">Relaxation</string>
    <string name="meal_info">Meal Info</string>
    <string name="hello">Hello</string>
    <string name="tv_remote">TV Remote</string>
    <string name="settings">Settings</string>
    <string name="video_visit">Video Visit</string>
    <string name="this_feature_is_not_available_for_you_yet_please_contact_administrator">This feature is not available for you yet. Please contact administrator!</string>
    <string name="loading_please_wait">Loading… Please Wait!</string>
    <string name="my_care_team">My Care Team</string>
    <string name="care_team_not_assigned_yet_it_will_be_assigned_soon">Care Team not assigned yet. It will be assigned soon.</string>
    <string name="start_a_video_visit_with_family_and_friends">Start a video visit with family and friends</string>
    <string name="featured_apps">Featured Apps</string>
    <string name="this_section_is_not_available_for_you_yet">This section is not available for you yet.</string>
    <string name="schedule">Schedule</string>
    <string name="sit_back_and_relax_no_upcoming_meetings">Sit back and relax. No upcoming meetings.</string>
</resources>