<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50000000"
    android:scrollbars="none"
    tools:context="fragment.MyStayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:rowCount="2"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#50000000"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/my_care_team_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/stethoscope"
                            app:tint="@android:color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/my_care_team"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/my_care_team"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="7dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/empty_my_care_team"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/care_team_not_assigned_yet_it_will_be_assigned_soon"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#50000000"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/video_visit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:src="@drawable/videocall"
                            app:tint="@android:color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/video_visit"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="1"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:src="@drawable/family"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="2dp"
                            android:padding="3dp"
                            android:text="@string/start_a_video_visit_with_family_and_friends"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#50000000"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/approved_apps_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:src="@drawable/approvedapps"
                            app:tint="@android:color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/featured_apps"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_app"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="7dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/empty_approved_apps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/this_section_is_not_available_for_you_yet"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#50000000"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/meal_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/mealinfo"
                            app:tint="@android:color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/meal_info"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/meal_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="7dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/empty_meal_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/this_section_is_not_available_for_you_yet"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#50000000"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/schedule_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="21dp"
                            android:layout_height="21dp"
                            android:src="@drawable/calendar"
                            app:tint="@android:color/white"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/schedule"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/schedule"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="7dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/empty_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/sit_back_and_relax_no_upcoming_meetings"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>